@@ -1,48 +1,24 @@
 import java.io.File;
-import javax.swing.JOptionPane;
 
-/* Try one of these options:
+/* Run the application using one of these options:
  * 
- * 1. Use the MySQL connector jar directly in your project
- * 2. What worked on my end (macOS) is running this through the terminal/cmd
- * Since VSCode does not support running Java files with external libraries directly,
- * you need to compile and run it with the classpath set to include the MySQL connector jar.
- * If your MySQL connector jar is in the same directory as your Java files, you can run:
+ * 1. Use the run scripts provided:
+ *    - On macOS/Linux: ./run.sh
+ *    - On Windows: run.bat
  * 
- * javac -cp ".:mysql-connector-j-9.3.0.jar" *.java && java -cp ".:mysql-connector-j-9.3.0.jar" Driver
- * OR
- * run.sh (./run.sh for macOS/Linux)
- * 
- * 3. If still not working, or if your .jar file is in the lib folder, try this:
- * 
- * javac -cp ".:mysql-connector-j-9.3.0.jar" *.java
- * java -cp ".:mysql-connector-j-9.3.0.jar" Driver
+ * 2. Compile and run manually with the MySQL connector jar in the lib folder:
+ *    - On macOS/Linux:
+ *      javac -cp "../lib/mysql-connector-j-9.3.0.jar:." *.java
+ *      java -cp "lib/mysql-connector-j-9.3.0.jar:src" Driver
+ *    - On Windows:
+ *      javac -cp "..\lib\mysql-connector-j-9.3.0.jar;." *.java
+ *      java -cp "lib\mysql-connector-j-9.3.0.jar;src" Driver
  */
 public class Driver { 
     public static void main(String[] args) {
         try {
             Class.forName("com.mysql.cj.jdbc.Driver");
-            
-            // Test the connection before starting the app
-            try {
-                DBConnection.getConnection().close();
-                new ClothingStoreApp();
-            } catch (Exception e) {
-                JOptionPane.showMessageDialog(null, 
-                    "Could not connect to database. Please check your settings.\n\nError: " + e.getMessage(),
-                    "Database Connection Error", JOptionPane.ERROR_MESSAGE);
-                DBConnection.showConfigDialog();
-                try {
-                    // Try again after reconfiguration
-                    DBConnection.getConnection().close();
-                    new ClothingStoreApp();
-                } catch (Exception ex) {
-                    JOptionPane.showMessageDialog(null, 
-                        "Still unable to connect to database. Please restart the application.",
-                        "Database Connection Error", JOptionPane.ERROR_MESSAGE);
-                    System.exit(1);
-                }
-            }
+            new ClothingStoreApp();
         } catch (ClassNotFoundException e) {
             boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
             String scriptName = isWindows ? "run.bat" : "run.sh";
@@ -56,10 +32,10 @@ public class Driver {
                     return;
                 }
                 if (!isWindows) {
-                    Runtime.getRuntime().exec("chmod +x " + scriptName).waitFor();
+                    new ProcessBuilder("chmod", "+x", scriptName).inheritIO().start().waitFor();
                 }
                 String command = isWindows ? scriptName : "." + File.separator + scriptName;
-                Process process = Runtime.getRuntime().exec(command);
+                new ProcessBuilder(command).inheritIO().start();
                 
                 System.exit(0);
             } catch (Exception ex) {
